added metadata for two langs + parsing thereof

--- a/tlingit/metadata.yml
+++ b/tlingit/metadata.yml
@@ -8,5 +8,5 @@
 - Longitude: -135.00
 - Countries: United States
 # reference
-- Reference: Cable, S. (2017). The Expression of Modality in Tlingit: A Paucity of Grammatical Devices. International Journal of American Linguistics, 83(4), 619–678. https://doi.org/10.1086/692975
+- Reference: "Cable, S. (2017). The Expression of Modality in Tlingit: A Paucity of Grammatical Devices. International Journal of American Linguistics, 83(4), 619–678. https://doi.org/10.1086/692975"
 - URL: https://doi.org/10.1086/692975
