--- a/gitksan/metadata.yml
+++ b/gitksan/metadata.yml
@@ -8,5 +8,5 @@
 - Longitude: -127.75
 - Countries: Canada
 # reference
-- Reference: Matthewson, L. (2013). Gitksan Modals. International Journal of American Linguistics, 79(3), 349–394. https://doi.org/10.1086/670751
+- Reference: "Matthewson, L. (2013). Gitksan Modals. International Journal of American Linguistics, 79(3), 349–394. https://doi.org/10.1086/670751"
 - URL: https://doi.org/10.1086/670751
