added two fields to metadata

--- a/gitksan/metadata.yml
+++ b/gitksan/metadata.yml
@@ -10,3 +10,5 @@
 # reference
 - Reference: "Matthewson, L. (2013). Gitksan Modals. International Journal of American Linguistics, 79(3), 349–394. https://doi.org/10.1086/670751"
 - URL: https://doi.org/10.1086/670751
+- Reference_type: paper_journal
+- Complete_language: true
