--- a/tlingit/metadata.yml
+++ b/tlingit/metadata.yml
@@ -10,3 +10,5 @@
 # reference
 - Reference: "Cable, S. (2017). The Expression of Modality in Tlingit: A Paucity of Grammatical Devices. International Journal of American Linguistics, 83(4), 619–678. https://doi.org/10.1086/692975"
 - URL: https://doi.org/10.1086/692975
+- Reference_type: paper_journal
+- Complete_language: true
