--- a/javanese-paciran/metadata.yml
+++ b/javanese-paciran/metadata.yml
@@ -11,3 +11,5 @@
 # reference
 - Reference: "Vander Klok, Jozina. “Pure Possibility and Pure Necessity Modals in Paciran Javanese.” Oceanic Linguistics, vol. 52, no. 2, 2013, pp. 341–374."
 - URL:  https://www.jstor.org/stable/43286355
+- Reference_type: paper_journal
+- Complete_language: true
