adding Qiang and changing WALS to Glotto Code

--- a/javanese-paciran/metadata.yml
+++ b/javanese-paciran/metadata.yml
@@ -1,6 +1,6 @@
 
 # from WALS; TODO: more specific??
-- WALS code: jav
+- Glotto Code code: java1254
 - ISO 639-3: jav
 - Genus: Javanese
 - Family: Austronesian
