updating Qiang and glottocode

--- a/Qiang/metadata.yml
+++ b/Qiang/metadata.yml
@@ -1,11 +1,6 @@
 # from WALS
-- Glotto code: 
-  - nort2722
-  - sout2728
-  - sout3257
-- ISO 639-3: 
-  - cng
-  - qxs
+- Glotto code: nort2722
+- ISO 639-3: cng
 - Genus: Qiangic
 - Family: Sino-Tibetan
 - Macroarea: Euroaisa
@@ -13,7 +8,7 @@
 - Longitude: 102.57
 - Countries: China
 # reference
-- Reference: LaPolla, R. J., & Huang, C. (2003). A grammar of qiang : With annotated texts and glossary. De Gruyter, Inc..
+- Reference: LaPolla, R. J., & Huang, C. (2003). A grammar of Qiang With annotated texts and glossary. De Gruyter, Inc..
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=325680.
 - Reference_type: reference_grammar
 - Complete_language: true
