--- a/Javanese-Paciran/metadata.yml
+++ b/Javanese-Paciran/metadata.yml
@@ -1,6 +1,6 @@
 
 # from WALS; TODO: more specific??
-- Glotto Code code: java1254
+- Glotto.code: java1254
 - ISO 639-3: jav
 - Genus: Javanese
 - Family: Austronesian
