changing yaml and finding typos

--- a/basic-format/Goemai/metadata.yml
+++ b/basic-format/Goemai/metadata.yml
@@ -1,12 +1,5 @@
 # from WALS
-- Glotto.code: goem1240
-- ISO 639-3: ank
-- Genus: West Chadic
-- Family: Afro-Asia
-- Macroarea: Africa
-- Latitude: 8.67
-- Longitude: 9.75
-- Countries: Nigeria
+- Glotto code: goem1240
 # reference
 - Reference: Hellwig. (2011). A grammar of Goemai. De Gruyter Mouton.
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=787185.
