--- a/basic-format/Goemai/metadata.yml
+++ b/basic-format/Goemai/metadata.yml
@@ -2,6 +2,7 @@
 - Glotto code: goem1240
 # reference
 - Reference: Hellwig. (2011). A grammar of Goemai. De Gruyter Mouton.
+- Reference_key: HellwigBirgit2011AgoG
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=787185.
 - Reference_type: reference_grammar
 - Complete_language: true
