--- a/basic-format/Hup/metadata.yml
+++ b/basic-format/Hup/metadata.yml
@@ -2,6 +2,7 @@
 - Glotto code: hupd1244
 # reference
 - Reference: Epps, P. (2005). A grammar of hup (Order No. 3202677). Available from ProQuest Dissertations & Theses Global. (305380992). https://www.proquest.com/dissertations-theses/grammar-hup/docview/305380992/se-2?accountid=14784
+- Reference_key: EppsPatience2005AgoH
 - URL: https://www.proquest.com/dissertations-theses/grammar-hup/docview/305380992/se-2?accountid=14784
 - Reference_type: reference_grammar
 - Complete_language: true
