--- a/basic-format/Kwaza/metadata.yml
+++ b/basic-format/Kwaza/metadata.yml
@@ -2,6 +2,7 @@
 - Glotto code: kwaz1243
 # reference
 - Reference: Voort, H. V. D. (2004). A grammar of kwaza. De Gruyter, Inc..
+- Reference_key: VoortHeinvander2004AGoK
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=325681.
 - Reference_type: reference_grammar
 - Complete_language: true
