--- a/basic-format/Qiang/metadata.yml
+++ b/basic-format/Qiang/metadata.yml
@@ -2,6 +2,7 @@
 - Glotto code: nort2722
 # reference
 - Reference: LaPolla, R. J., & Huang, C. (2003). A grammar of Qiang With annotated texts and glossary. De Gruyter, Inc..
+- Reference_key: LaPollaRandyJ2003AGoQ
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=325680.
 - Reference_type: reference_grammar
 - Complete_language: true
