--- a/basic-format/Gitksan/metadata.yml
+++ b/basic-format/Gitksan/metadata.yml
@@ -2,6 +2,7 @@
 - Glotto code: gitx1241
 # reference
 - Reference: "Matthewson, L. (2013). Gitksan Modals. International Journal of American Linguistics, 79(3), 349–394. https://doi.org/10.1086/670751"
+- Reference_key: Gitksan
 - URL: https://doi.org/10.1086/670751
 - Reference_type: paper_journal
 - Complete_language: true
