--- a/basic-format/Jamul-Tipay/metadata.yml
+++ b/basic-format/Jamul-Tipay/metadata.yml
@@ -2,6 +2,7 @@
 - Glotto code: kumi1248
 # reference
 - Reference: Miller, A. (2001). A grammar of jamul tiipay. De Gruyter, Inc..
+- Reference_key: MillerAmy2001AgoJ
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=3042260.
 - Reference_type: reference_grammar
 - Complete_language: true
