--- a/basic-format/Tlingit/metadata.yml
+++ b/basic-format/Tlingit/metadata.yml
@@ -2,6 +2,7 @@
 - Glotto code: tlin1245
 # reference
 - Reference: "Cable, S. (2017). The Expression of Modality in Tlingit: A Paucity of Grammatical Devices. International Journal of American Linguistics, 83(4), 619–678. https://doi.org/10.1086/692975"
+- Reference_key: Cable2017TheEO
 - URL: https://doi.org/10.1086/692975
 - Reference_type: paper_journal
 - Complete_language: true
