--- a/basic-format/Mian/metadata.yml
+++ b/basic-format/Mian/metadata.yml
@@ -2,7 +2,7 @@
 - Glotto code: mian1256
 # reference
 - Reference: Fedden, S. (2011). A grammar of mian. De Gruyter, Inc..
-- Reference_key: FeddenSebastian2011AgoM
+- Reference_key: Fedden-2011-Mian
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=799437.
 - Reference_type: reference_grammar
 - Complete_language: true
