--- a/basic-format/Tundra-Nenets/metadata.yml
+++ b/basic-format/Tundra-Nenets/metadata.yml
@@ -2,7 +2,7 @@
 - Glotto code: nene1249
 # reference
 - Reference: Nikolaeva, I. (2014). A grammar of tundra nenets. De Gruyter, Inc..
-- Reference_key: NikolaevaIrina2014AgoT
+- Reference_key: Nikolaeva-2014-Tundra-Nenets
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=1778484.
 - Reference_type: reference_grammar
 - Complete_language: true
