update keys in metadata from underscore to hyphen

--- a/basic-format/Nuosu/metadata.yml
+++ b/basic-format/Nuosu/metadata.yml
@@ -2,7 +2,7 @@
 - Glotto.code: sich1238
 # reference
 - Reference: Gerner. (2013). A grammar of Nuosu. De Gruyter Mouton.
-- Reference_key: Gerner-etal-2013-Nuosu
+- Reference-key: Gerner-etal-2013-Nuosu
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=1498689.
-- Reference_type: reference_grammar
-- Complete_language: true
+- Reference-type: reference-grammar
+- Complete-language: true
