--- a/basic-format/Donmari/metadata.yml
+++ b/basic-format/Donmari/metadata.yml
@@ -2,7 +2,7 @@
 - Glotto code: doma1258
 # reference
 - Reference: Matras, Y. (2012). A grammar of domari. De Gruyter, Inc..
-- Reference_key: Matras-2012-Domari
+- Reference-key: Matras-2012-Domari
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=912837.
-- Reference_type: reference_grammar
-- Complete_language: true
+- Reference-type: reference-grammar
+- Complete-language: true
