--- a/basic-format/Goemai/metadata.yml
+++ b/basic-format/Goemai/metadata.yml
@@ -2,7 +2,7 @@
 - Glotto code: goem1240
 # reference
 - Reference: Hellwig. (2011). A grammar of Goemai. De Gruyter Mouton.
-- Reference_key: Hellwig-2011-Goemai
+- Reference-key: Hellwig-2011-Goemai
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=787185.
-- Reference_type: reference_grammar
-- Complete_language: true
+- Reference-type: reference-grammar
+- Complete-language: true
