--- a/basic-format/Hinuq/metadata.yml
+++ b/basic-format/Hinuq/metadata.yml
@@ -2,7 +2,7 @@
 - Glotto code: hinu1240
 # reference
 - Reference: Forker, D. (2013). A grammar of hinuq. De Gruyter, Inc..
-- Reference_key: Forker-2013-Hinuq
+- Reference-key: Forker-2013-Hinuq
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=1037924.
-- Reference_type: reference_grammar
-- Complete_language: true
+- Reference-type: reference-grammar
+- Complete-language: true
