--- a/basic-format/Javanese-Paciran/metadata.yml
+++ b/basic-format/Javanese-Paciran/metadata.yml
@@ -3,7 +3,7 @@
 - Glotto.code: java1254
 # reference
 - Reference: "Vander Klok, Jozina. “Pure Possibility and Pure Necessity Modals in Paciran Javanese.” Oceanic Linguistics, vol. 52, no. 2, 2013, pp. 341–374."
-- Reference_key: VanderKlok-2013-Javanese
+- Reference-key: VanderKlok-2013-Javanese
 - URL:  https://www.jstor.org/stable/43286355
-- Reference_type: paper_journal
-- Complete_language: true
+- Reference-type: paper-journal
+- Complete-language: true
