--- a/basic-format/Mani/metadata.yml
+++ b/basic-format/Mani/metadata.yml
@@ -2,7 +2,7 @@
 - Glotto code: bull1247
 # reference
 - Reference: Childs. (2011). A grammar of Mani. De Gruyter Mouton.
-- Reference_key: Childs-2011-Mani
+- Reference-key: Childs-2011-Mani
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=835471.
-- Reference_type: reference_grammar
-- Complete_language: true
+- Reference-type: reference-grammar
+- Complete-language: true
