--- a/basic-format/Vaeakau-Taumako/metadata.yml
+++ b/basic-format/Vaeakau-Taumako/metadata.yml
@@ -2,7 +2,7 @@
 - Glotto code: pile1238
 # reference
 - Reference: Næss, Å., Hovdhaugen, E., & Næss, Å. (2011). A grammar of vaeakau-taumako. De Gruyter, Inc..
-- Reference_key: Næss-2011-Vaeakau-Taumako
+- Reference-key: Næss-2011-Vaeakau-Taumako
 - URL: https://ebookcentral.proquest.com/lib/washington/detail.action?docID=736991.
-- Reference_type: reference_grammar
-- Complete_language: true
+- Reference-type: reference-grammar
+- Complete-language: true
