--- a/basic-format/Lillooet-Salish/metadata.yml
+++ b/basic-format/Lillooet-Salish/metadata.yml
@@ -2,7 +2,7 @@
 - Glotto code: lill1248
 # reference
 - Reference: Rullmann, H., Matthewson, L., & Davis, H. (2008). Modals as distributive indefinites. Natural Language Semantics, 16(4), 317–357. http://www.jstor.org/stable/23748121
-- Reference-key: Rullmann-etal-2008-St'át'imcets
+- Reference-key: Rullmann-etal-2008-Lillooet-Salish
 - URL: http://www.jstor.org/stable/23748121
 - Reference-type: paper-journal
 - Complete-language: true
