--- a/basic-format/Tagalog/metadata.yml
+++ b/basic-format/Tagalog/metadata.yml
@@ -1,5 +1,5 @@
 # from WALS
-- Glotto code: taga1269 (Standard Filipino Tagalog)
+- Glotto code: taga1270
 # reference
 - Reference: Uegaki, Wataru & Ella Hannon. 2022. Cross-linguistic dataset of force-flavour combinations in modal elements. Unpublished dataset. 
 - Reference-key: Uegaki-Hannon-2022
