--- a/basic-format/Greek/metadata.yml
+++ b/basic-format/Greek/metadata.yml
@@ -1,5 +1,5 @@
 # from WALS
-Glotto code: gree1276
+Glotto code: mode1248
 # reference
 Reference: Uegaki, Wataru & Ella Hannon. 2022. Cross-linguistic dataset of force-flavour combinations in modal elements. Unpublished dataset. 
 Reference-key: Uegaki-Hannon-2022
