--- a/basic-format/Khmer/metadata.yml
+++ b/basic-format/Khmer/metadata.yml
@@ -1,8 +1,8 @@
 # from WALS
-- Glotto code: cent1989 (Central Khmer)
+Glotto code: cent1989
 # reference
-- Reference: Uegaki, Wataru & Ella Hannon. 2022. Cross-linguistic dataset of force-flavour combinations in modal elements. Unpublished dataset. 
-- Reference-key: Uegaki-Hannon-2022
-- URL: N/A
-- Reference-type: elicitation
-- Complete-language: true
+Reference: Uegaki, Wataru & Ella Hannon. 2022. Cross-linguistic dataset of force-flavour combinations in modal elements. Unpublished dataset. 
+Reference-key: Uegaki-Hannon-2022
+URL: N/A
+Reference-type: elicitation
+Complete-language: true
