--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,3 +15,10 @@ jobs:
         run: pip install -r requirements.txt
       - name: Run build script
         run: sh build.sh
+      - name: Commit CLDF files
+        run: |
+          if ! git diff --exit-code; then
+            git add *
+            git commit -m "GH Action CLDF build $(date)"
+            git push -f origin master
+          fi
